# misis2023f-22-04-isupov-g-s

./: CMakeLists.txt  README.md  codeforces.id  status.md
prj.codeforces/: 0050a.cpp  0112a.cpp  0158a.cpp  0231a.cpp  0282a.cpp  0339a.cpp  0485a.cpp  0758a.cpp  0831a.cpp  0913a.cpp  0915a.cpp  0980a.cpp  1108a.cpp  1353c.cpp  1407a.cpp  1454b.cpp  1543b.cpp  1632b.cpp  1703a.cpp  1833c.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp
